--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <title>Vite + React + TS</title>
+    <title>BCS350 Capstone Project</title>
   </head>
   <body>
     <div id="root"></div>
